[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-sessions"
version = "0.4.2"
description = "CHUK Sessions provides a comprehensive, async-first session management system with automatic expiration, and support for both in-memory and Redis storage backends. Perfect for web applications, MCP servers, API gateways, and microservices that need reliable, scalable session handling."
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies - only what's needed for memory provider
dependencies = [
  "csrf>=0.1b1",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
# Redis support
redis = [
  "redis>=6.2.0",
]

# Development dependencies
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.4.6",
  "psutil>=7.0.0",
]

# All optional dependencies
all = [
  "redis>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_sessions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "psutil>=7.0.0",
]
